gccida/c1/record_last_reg_set_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/gcse.c:2832:6: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
v2 = reg_avail_info_0; 
     ^~~~~~~~~~~~~~~~
     reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/gcse.c:2833:20: error: use of undeclared identifier 'uid_cuid_1'
v3 = *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/gcse.c:2834:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0[regno].last_set = v3; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_last_reg_set_info/src/obj/gcse.o] Error 1
